# fast-api-ordering-app

./: .env.example  .gitignore  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  FLUTTER_API_STATUS.md  Makefile  README.md  RENDER_DEPLOY_TH.md  SUPABASE_CONNECTION_GUIDE.md  alembic.ini  backup_db.sh  create_user.py  docker-compose.yml  main.py  migrate_to_cloud.sh  pyproject.toml  pytest.ini  quick_test.sh  render.yaml  requirements.txt  seed_data.py  system_status.py  test_all_apis.py  test_auth_fix.py  test_cloud_connection.sh  test_db.py  validate_apis.py
.github/instructions/: ai-language.instructions.md  ai-role.instructions.md
alembic/: env.py
alembic/versions/: ddab603d8ca8_initial_migration_with_all_tables.py
app/: __init__.py
app/api/: __init__.py  admin_router.py  auth_router.py  db_admin_router.py  menu_router.py  orders_router.py  superadmin_router.py  user_router.py
app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: database.py
app/models/: __init__.py  audit.py  menu.py  order.py  permission.py  user.py
app/schemas/: __init__.py  menu.py  order.py  user.py
app/services/: __init__.py  menu_service.py  order_service.py  user_service.py
docs/: API_ENDPOINTS.md  API_SETUP_GUIDE.md  CLOUD_MIGRATION.md  COMPLETE_README.md  DEPLOY_QUICK.md  FLUTTER_INTEGRATION.md  GET_CONNECTION_STRING.md  MIGRATION_QUICK_START.md
scripts/: encode_password.py  promote_to_superadmin.py
tests/: conftest.py  test_users.py
