[tool.poetry]
name = "fastapi-ordering"
version = "1.0.0"
description = "FastAPI Ordering System"
authors = ["Mek Chawanwit"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.131.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
sqlalchemy = "^2.0.46"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.5"
pydantic-settings = "^2.8.2"
email-validator = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint]
max-line-length = 100
